--- a/main.css
+++ b/main.css
@@ -25,6 +25,9 @@ p {
 }
 #blue p {
     color: #fff;
+    height: 250px;
+    line-height: 250px;
+    width: 250px;
     -ms-transform: rotate(-45deg);
     -webkit-transform: rotate(-45deg);
     transform: rotate(-45deg);
