--- a/main.css
+++ b/main.css
@@ -60,3 +60,27 @@ button {
     margin: 0 5px;
     width: 21px;
 }
+@media only screen and (min-width: 768px) {
+    #blue {
+        display: inline-block;
+        margin: 100px -115px 100px 40px;
+        position: relative;
+        z-index: 1;
+    }
+    #blue p {
+        margin: 0 auto;
+        text-align: left;
+        text-transform: uppercase;
+    }
+    #green {
+        display: inline-block;
+        position: relative;
+        z-index: 2;
+    }
+    #green p {
+        margin: 0;
+        padding: 115px 10px 0;
+        text-align: right;
+        text-transform: uppercase;
+    }
+}
